[package]
name = "bpm-analyzer"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/not-jan/bpm-analyzer"
readme = "README.md"
homepage = "https://github.com/not-jan/bpm-analyzer"
keywords = ["audio", "dsp", "music"]
categories = ["multimedia::audio"]
description = "A simple library for calculating the BPM"
documentation = "https://docs.rs/bpm-analyzer/latest/bpm_analyzer/"

[[bin]]
path = "src/bin/app.rs"
name = "bpm-analyzer"
required-features = ["bin"]

[dependencies]
anyhow = { version = "1", optional = true }
bon = "3.8.2"
clap = { version = "4.5.54", features = ["env", "derive"], optional = true }
cpal = "0.17.1"
crossbeam-channel = "0.5.15"
eframe = { version = "0.32", optional = true }
egui = { version = "0.32", optional = true }
egui-plotter = { version = "0.6.0", optional = true }
fundsp = "0.23.0"
itertools = "0.14.0"
osclet = "0.3.1"
plotters = { version = "0.3.7", optional = true }
resampler = "0.4.1"
ringbuffer = "0.16.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"], optional = true }

[features]
bin = ["dep:tracing-subscriber", "dep:plotters", "dep:egui-plotter", "dep:eframe", "dep:egui", "dep:anyhow", "dep:clap"]
default = []
